<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GitHub User 3</string>

    <string name="username">\@%1$s</string>
    <string name="user_count" tools:ignore="PluralsCandidate">%1$d followers · %2$d following · %3$d repositories</string>
    <string name="search_hint">Search username…</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="share">Share</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="add_user_to_favorite">Add user to favorite</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>

    <!-- placeholder -->
    <string name="name">Name</string>
    <string name="location">location</string>
    <string name="location_icon">location icon</string>
    <string name="_username">username</string>
    <string name="_0_followers_0_following_0_repositories">0 followers · 0 following · 0 repositories</string>

    <!-- action bar title -->
    <string name="ab_title_main">Github User\'s Search</string>
    <string name="ab_title_detailuser">Detail User</string>
    <string name="ab_title_favorite">Favorite User</string>
    <string name="ab_title_settings">Settings</string>

</resources>


