<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_anchor="@+id/constraintLayout"
            app:layout_anchorGravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                app:civ_border_color="#bbbbbb"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/Text.Main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_user"
                app:layout_constraintStart_toStartOf="@+id/img_user"
                app:layout_constraintTop_toBottomOf="@+id/img_user" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_username"
                app:layout_constraintEnd_toEndOf="@+id/img_user"
                app:layout_constraintStart_toStartOf="@+id/img_user"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/location_icon"
                app:layout_constraintBottom_toBottomOf="@+id/tv_location"
                app:layout_constraintEnd_toStartOf="@+id/tv_location"
                app:layout_constraintTop_toTopOf="@+id/tv_location"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:text="@string/location"
                app:layout_constraintEnd_toEndOf="@+id/img_user"
                app:layout_constraintStart_toStartOf="@+id/img_user"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <TextView
                android:id="@+id/tv_user_count"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_0_followers_0_following_0_repositories"
                app:layout_constraintEnd_toEndOf="@+id/img_user"
                app:layout_constraintStart_toStartOf="@+id/img_user"
                app:layout_constraintTop_toBottomOf="@+id/tv_location" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_count"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="0dp"
                android:layout_height="500dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs"
                app:layout_constraintVertical_bias="0.0" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/tabs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="Add user to favorite"
        android:visibility="gone"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"/>

</RelativeLayout>
